[tool.poetry]
name = "wb-check-position"
version = "0.1.0"
description = ""
authors = ["aldeig <alkin.denis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
